Fixed azure color scheme issue

--- a/style.css
+++ b/style.css
@@ -2897,7 +2897,7 @@ object {
 	--steel: #7F829A;
 	--bluey-grey-two: #A5A8BB;
 	--watermelon: #FF4961;
-	--azure: #1E9FF2l
+	--azure: #1E9FF2;
 }
 .widget_tag_cloud ul li,
 body.custom-background {
