--- a/woocommerce.css
+++ b/woocommerce.css
@@ -798,7 +798,7 @@ ul.products li.product {
 	-webkit-box-shadow: 0 2px 6px 0 rgba(69, 73, 91, 0.08);
 	        box-shadow: 0 2px 6px 0 rgba(69, 73, 91, 0.08);
 }
-ul.products li.product:not(.product-category) {
+ul.products li.product .woocommerce-LoopProduct-link {
 	padding-bottom: 57px;
 }
 ul.products li.product .star-rating {
@@ -3927,10 +3927,10 @@ ul.products li.product .woocommerce-product-details__categories a {
 }
 .woocommerce-breadcrumb a:hover,
 .woocommerce-breadcrumb {
-	color: {$breadcrumbs_woocommerce_content_color_darker};
+	color: var(--gray);
 }
 .woocommerce-breadcrumb a:not(:hover) {
-	color: var(--gray);
+	color: var(--white);
 }
 .woocommerce-MyAccount-navigation-link.is-active:after,
 .woocommerce-MyAccount-navigation ul,
