--- a/woocommerce.css
+++ b/woocommerce.css
@@ -133,11 +133,13 @@ form.product-search-form div:before,
 .woocommerce-info:before, 
 .woocommerce-error:before, 
 .woocommerce-noreviews:before,
+.single_add_to_cart_button:before,
 .woocommerce-product-gallery__trigger:after,
 ul.products li.product .added_to_cart:after,
 ul.products li.product .button:after {
 	font-family: 'Feather';
 }
+.woocommerce-account:not(.logged-in) .entry-content > .woocommerce > h2,
 #customer_login > div > h2 {
 	font-size: 28px;
 }
@@ -203,6 +205,8 @@ ul.products li.product .woocommerce-loop-product__title {
 	font-size: 16px;
 }
 form.woocommerce-ResetPassword button,
+.woocommerce-account:not(.logged-in) .entry-content > .woocommerce > .woocommerce-form-login button,
+.woocommerce-account:not(.logged-in) .entry-content > .woocommerce > .woocommerce-form-login .woocommerce-LostPassword,
 #customer_login button,
 #customer_login .woocommerce-LostPassword,
 ul.products li.product .woocommerce-product-details__categories {
@@ -345,6 +349,7 @@ ul.products li.product .woocommerce-loop-product__title,
 }
 .site-wc-search .widget_product_search button[type="submit"],
 .site-wc-search form.product-search-form button[type="submit"],
+.woocommerce-account:not(.logged-in) .entry-content > .woocommerce > h2,
 #customer_login > div > h2,
 .woocommerce-checkout-review-order-table tfoot tr:not(.order-total) th,
 .cart_totals .shipping label,
@@ -360,6 +365,7 @@ ul.products li.product .woocommerce-loop-product__title,
 .error-404-last .best-selling-products > h2,
 .error-404-first .promoted-products > h2,
 .woocommerce-MyAccount-content table.shop_table_responsive tr td:before,
+.woocommerce-account:not(.logged-in) .entry-content > .woocommerce > .woocommerce-form-login .woocommerce-LostPassword,
 #customer_login .woocommerce-LostPassword,
 .woocommerce-MyAccount-content legend,
 .woocommerce-MyAccount-content > form > h3,
@@ -412,6 +418,8 @@ ul.products li.product .woocommerce-loop-product__title {
 	font-weight: 600;
 }
 .pswp__caption__center,
+.woocommerce-account:not(.logged-in) .entry-content > .woocommerce > .woocommerce-form-login .woocommerce-LostPassword,
+.woocommerce-account:not(.logged-in) .entry-content > .woocommerce > h2,
 #customer_login .woocommerce-LostPassword,
 #customer_login > div > h2,
 form.track_order .form-row:last-of-type,
@@ -683,6 +691,10 @@ table.shop_table_responsive tr td {
 table.shop_table_responsive tr td.download-actions .button {
 	display: block;
 	text-align: center;
+}
+.shop_table tr > th:not(:last-of-type), 
+.shop_table tr > td:not(:last-of-type) {
+	padding-right: 0;
 }
 @media (min-width: 48.0625em) {
 	table.shop_table_responsive thead {
@@ -1140,14 +1152,12 @@ ol.commentlist,
 .single-product div.product .woocommerce-product-gallery .flex-control-thumbs {
 	grid-gap: 10px;
 }
-.single-product div.product .woocommerce-product-gallery .flex-control-thumbs li {
+.single-product div.product .woocommerce-product-gallery .flex-control-thumbs li img {
 	cursor: pointer;
 	list-style: none;
 	border-width: 1px;
     border-style: solid;
     padding: 5px;
-}
-.single-product div.product .woocommerce-product-gallery .flex-control-thumbs li img {
 	opacity: .5;
 	-webkit-transition: 0.3s;
 	-o-transition: 0.3s;
@@ -1902,7 +1912,7 @@ p.stars:hover a:before {
 }
 div:not(.woocommerce-NoticeGroup) > .woocommerce-message > li, 
 div:not(.woocommerce-NoticeGroup) > .woocommerce-info > li, 
-div:not(.woocommerce-NoticeGroup) > .woocommerce-error > li,
+body:not(.woocommerce-account) div:not(.woocommerce-NoticeGroup) > .woocommerce-error > li,
 .woocommerce-message, 
 .woocommerce-info, 
 .woocommerce-error, 
@@ -2009,7 +2019,7 @@ ul.woocommerce-error {
 	}
 	div:not(.woocommerce-NoticeGroup) > .woocommerce-message > li, 
 	div:not(.woocommerce-NoticeGroup) > .woocommerce-info > li, 
-	div:not(.woocommerce-NoticeGroup) > .woocommerce-error > li,
+	body:not(.woocommerce-account) div:not(.woocommerce-NoticeGroup) > .woocommerce-error > li,
 	.woocommerce-message, 
 	.woocommerce-info, 
 	.woocommerce-error, 
@@ -2323,10 +2333,10 @@ dl.variation dd > p {
 		    grid-template-columns: 90px 2.5fr 1fr 1.2fr 0.7fr 0.2fr;
 	}
 	.woocommerce-cart-form__contents thead tr {
-		    grid-template-areas: "product-name-title product-name-title product-price-title product-quantity-title product-subtotal-title product-subtotal-title"
+		grid-template-areas: "product-name-title product-name-title product-price-title product-quantity-title product-subtotal-title product-subtotal-title"
 	}
 	.woocommerce-cart-form__cart-item {
-		    grid-template-areas: "product-thumbnail-item product-name-item product-price-item product-quantity-item product-subtotal-item product-remove-item"
+		grid-template-areas: "product-thumbnail-item product-name-item product-price-item product-quantity-item product-subtotal-item product-remove-item"
 	}
 	.woocommerce-cart-form__contents th.product-remove,
 	.woocommerce-cart-form__contents th.product-thumbnail {
@@ -3331,6 +3341,7 @@ ul.woocommerce-thankyou-order-details li {
 .woocommerce-MyAccount-navigation-link:not(:last-child) {
     border-width: 0 0 1px 0;
 }
+.woocommerce-account:not(.logged-in) .entry-content > .woocommerce > .woocommerce-form-login,
 #customer_login .woocommerce-form,
 .woocommerce-Address-title,
 .woocommerce-MyAccount-navigation-link > a {
@@ -3391,16 +3402,20 @@ ul.woocommerce-thankyou-order-details li {
 .woocommerce-Address-title {
 	padding-bottom: 5px;
 }
+.woocommerce-account:not(.logged-in) .entry-content > .woocommerce > h2,
 form.woocommerce-ResetPassword > p:first-of-type,
 #customer_login > div > h2,
 .woocommerce-EditAccountForm .form-row:not(:first-of-type):not(:nth-child(2)),
 .woocommerce-Address-title > h3 {
 	margin-top: 0;
 }
+.woocommerce-account:not(.logged-in) .entry-content > .woocommerce > h2,
+.woocommerce-account:not(.logged-in) .entry-content > .woocommerce > .woocommerce-form-login,
 .woocommerce-EditAccountForm > p:last-of-type,
 .woocommerce-MyAccount-content .woocommerce-address-fields button,
 form.woocommerce-ResetPassword > p:last-of-type,
 #customer_login form > p:last-of-type,
+.woocommerce-account:not(.logged-in) .entry-content > .woocommerce > .woocommerce-form-login > p:last-of-type,
 #customer_login .woocommerce-form {
 	margin-bottom: 0;
 }
@@ -3448,6 +3463,7 @@ form.woocommerce-ResetPassword,
 	-webkit-box-shadow: 0 10px 14px 0 rgba(69, 73, 91, 0.08);
 	        box-shadow: 0 10px 14px 0 rgba(69, 73, 91, 0.08);
 }
+.woocommerce-account:not(.logged-in) .entry-content > .woocommerce > .woocommerce-form-login,
 #customer_login .woocommerce-form {
 	-webkit-box-orient: vertical;
 	-webkit-box-direction: normal;
@@ -3565,9 +3581,16 @@ form.woocommerce-ResetPassword button,
 	#customer_login > div {
 		padding: 80px;
 	}
+	.woocommerce-account:not(.logged-in) .entry-content > .woocommerce > .woocommerce-form-login {
+		padding: 0 80px 80px; 
+	}
+	.woocommerce-account:not(.logged-in) .entry-content > .woocommerce > h2 {
+		padding: 80px 80px 50px; 
+	}
 	#customer_login > div > h2 {
 		margin-bottom: 50px;
 	}
+	.woocommerce-account:not(.logged-in) .entry-content > .woocommerce > .woocommerce-form-login .woocommerce-form-row--wide,
 	#customer_login .woocommerce-form-row--wide {
 		margin-bottom: 20px;
 	}
@@ -3587,6 +3610,13 @@ form.woocommerce-ResetPassword button,
 	#customer_login > div > h2 {
 		margin-bottom: 30px;
 	}
+	.woocommerce-account:not(.logged-in) .entry-content > .woocommerce > .woocommerce-form-login {
+		padding: 0 50px 50px; 
+	}
+	.woocommerce-account:not(.logged-in) .entry-content > .woocommerce > h2 {
+		padding: 50px 50px 30px; 
+	}
+	.woocommerce-account:not(.logged-in) .entry-content > .woocommerce > .woocommerce-form-login .woocommerce-form-row--wide,
 	#customer_login .woocommerce-form-row--wide {
 		margin-bottom: 15px;
 	}
@@ -3618,9 +3648,16 @@ form.woocommerce-ResetPassword button,
 	#customer_login > div {
 		padding: 30px;
 	}
+	.woocommerce-account:not(.logged-in) .entry-content > .woocommerce > .woocommerce-form-login {
+		padding: 0 30px 30px; 
+	}
+	.woocommerce-account:not(.logged-in) .entry-content > .woocommerce > h2 {
+		padding: 30px 30px 10px; 
+	}
 	#customer_login > div > h2 {
 		margin-bottom: 10px;
 	}
+	.woocommerce-account:not(.logged-in) .entry-content > .woocommerce > .woocommerce-form-login .woocommerce-form-row--wide,
 	#customer_login .woocommerce-form-row--wide {
 		margin-bottom: 5px;
 	}
@@ -3749,6 +3786,7 @@ p.stars.selected a.active:before,
 	color: var(--apricot);
 }
 .woocommerce-MyAccount-content legend,
+.woocommerce-account:not(.logged-in) .entry-content > .woocommerce > .woocommerce-form-login .woocommerce-LostPassword,
 #customer_login .woocommerce-LostPassword a,
 .woocommerce-table--order-downloads .download-product a,
 .woocommerce-table--order-details a,
@@ -3776,6 +3814,8 @@ ol.commentlist .comment-text .woocommerce-review__author,
 form.woocommerce-ResetPassword,
 form.track_order,
 #customer_login > div,
+.woocommerce-account:not(.logged-in) .entry-content > .woocommerce > h2,
+.woocommerce-account:not(.logged-in) .entry-content > .woocommerce > .woocommerce-form-login,
 .woocommerce-order-received .woocommerce-order-details,
 .checkout-slides .checkout-control-nav li a:not(.flex-active):after,
 .woocommerce-checkout-payment,
@@ -3794,6 +3834,7 @@ ul.products li.product .button {
 .widget_product_categories .product-categories li.current-cat-parent > a,
 .widget_product_categories .product-categories li.current-cat > a,
 #customer_login .woocommerce-LostPassword a:hover,
+.woocommerce-account:not(.logged-in) .entry-content > .woocommerce > .woocommerce-form-login .woocommerce-LostPassword a:hover,
 .woocommerce-MyAccount-navigation-link:not(.is-active) > a:hover,
 .woocommerce-MyAccount-navigation-link.is-active > a,
 .woocommerce-table--order-downloads .download-product a:hover,
@@ -3953,6 +3994,8 @@ ol.commentlist .comment_container,
 .woocommerce-mini-cart-item img.attachment-woocommerce_thumbnail {
 	border-color: var(--pale-grey-two-darker);
 }
+.site-footer .product_list_widget:not(.cart_list) li img, 
+#secondary.widget-area .product_list_widget:not(.cart_list) li img,
 .error-404-last .best-selling-products > h2,
 .error-404-first .promoted-products > h2,
 table.woocommerce-MyAccount-orders tr:not(:last-of-type),
@@ -3982,7 +4025,7 @@ table.woocommerce-MyAccount-orders tr:not(:last-of-type),
 .woocommerce-tabs ul.tabs li:not(:last-child),
 .woocommerce-tabs ul.tabs,
 .woocommerce-product-details__short-description,
-.single-product div.product .woocommerce-product-gallery .flex-control-thumbs li {
+.single-product div.product .woocommerce-product-gallery .flex-control-thumbs li img {
 	border-color: var(--pale-grey-two-dark);
 }
 .select2-container--default .select2-results__option--highlighted[aria-selected], 
